# drf_course_work

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
habbits/: models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habbits/migrations/: 0001_initial.py  0002_alter_habit_execution_time_alter_habit_periodicity.py  0003_remove_habit_is_useful_habit_is_pleasant.py  0004_alter_habit_owner.py  0005_alter_habit_owner.py  0006_alter_habit_is_pleasant_alter_habit_is_shared.py  0007_habit_connected_habits.py  0008_alter_habit_execution_time.py  0009_remove_habit_connected_habits_habit_connected_habit.py  0010_habit_execution_date_alter_habit_execution_time.py  0011_alter_habit_execution_date.py  0012_alter_habit_execution_date.py  0013_alter_habit_periodicity.py  0014_alter_habit_execution_date.py  0015_alter_habit_execution_date.py
users/: models.py  serializers.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_remove_user_username_user_avatar_user_city_and_more.py  0003_user_tg_id.py
